// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`config/presets/index > getPreset > gets linters 1`] = `
{
  "description": [
    "All lint-related packages.",
  ],
  "extends": [
    "packages:emberTemplateLint",
    "packages:eslint",
    "packages:phpLinters",
    "packages:stylelint",
    "packages:tslint",
  ],
  "matchPackageNames": [
    "prettier",
    "remark-lint",
    "standard",
  ],
}
`;

exports[`config/presets/index > getPreset > handles 404 packages 1`] = `undefined`;

exports[`config/presets/index > getPreset > handles 404 packages 2`] = `undefined`;

exports[`config/presets/index > getPreset > handles 404 packages 3`] = `undefined`;

exports[`config/presets/index > resolvePreset > migrates automerge in presets 1`] = `
{
  "automergeType": "pr",
  "branchPrefix": "renovate/",
  "description": [
    "Add the \`renovate/\` prefix to all branch names.",
    "Use semantic commit type \`fix\` for dependencies and \`chore\` for all others if semantic commits are in use.",
    "Require all status checks to pass before any automerging.",
    "Pin dependency versions for development dependencies and retain SemVer ranges for others.",
  ],
  "ignoreTests": false,
  "ignoreUnstable": true,
  "labels": [
    "dependencies",
  ],
  "lockFileMaintenance": {
    "automerge": true,
    "enabled": true,
    "schedule": [
      "before 8am on Monday",
    ],
  },
  "major": {
    "automerge": false,
  },
  "minor": {
    "automerge": true,
  },
  "packageRules": [
    {
      "matchPackageNames": [
        "*",
      ],
      "semanticCommitType": "chore",
    },
    {
      "matchDepTypes": [
        "dependencies",
        "require",
      ],
      "semanticCommitType": "fix",
    },
    {
      "matchDatasources": [
        "maven",
      ],
      "matchDepTypes": [
        "compile",
        "provided",
        "runtime",
        "system",
        "import",
        "parent",
      ],
      "semanticCommitType": "fix",
    },
    {
      "matchDepTypes": [
        "project.dependencies",
        "project.optional-dependencies",
      ],
      "matchManagers": [
        "pep621",
      ],
      "semanticCommitType": "fix",
    },
    {
      "matchDepTypes": [
        "dependencies",
        "extras",
      ],
      "matchManagers": [
        "poetry",
      ],
      "semanticCommitType": "fix",
    },
    {
      "matchPackageNames": [
        "*",
      ],
      "rangeStrategy": "replace",
    },
    {
      "matchDepTypes": [
        "devDependencies",
        "dev-dependencies",
        "dev",
      ],
      "rangeStrategy": "pin",
    },
    {
      "matchDepTypes": [
        "peerDependencies",
      ],
      "rangeStrategy": "widen",
    },
  ],
  "prCreation": "immediate",
  "rebaseWhen": "behind-base-branch",
  "respectLatest": true,
  "schedule": [
    "before 8am",
  ],
  "semanticCommits": "enabled",
  "separateMajorMinor": true,
  "separateMinorPatch": false,
  "timezone": "Asia/Taipei",
}
`;

exports[`config/presets/index > resolvePreset > resolves eslint 1`] = `
{
  "matchPackageNames": [
    "@types/eslint",
    "babel-eslint",
    "@babel/eslint-parser",
    "@eslint/**",
    "@eslint-community/**",
    "@stylistic/eslint-plugin**",
    "@types/eslint__**",
    "@typescript-eslint/**",
    "typescript-eslint",
    "eslint**",
  ],
}
`;

exports[`config/presets/index > resolvePreset > resolves linters 1`] = `
{
  "description": [
    "All lint-related packages.",
  ],
  "matchPackageNames": [
    "ember-template-lint**",
    "@types/eslint",
    "babel-eslint",
    "@babel/eslint-parser",
    "@eslint/**",
    "@eslint-community/**",
    "@stylistic/eslint-plugin**",
    "@types/eslint__**",
    "@typescript-eslint/**",
    "typescript-eslint",
    "eslint**",
    "friendsofphp/php-cs-fixer",
    "squizlabs/php_codesniffer",
    "symplify/easy-coding-standard",
    "stylelint**",
    "codelyzer",
    "/\\btslint\\b/",
    "prettier",
    "remark-lint",
    "standard",
  ],
}
`;

exports[`config/presets/index > resolvePreset > resolves nested groups 1`] = `
{
  "description": [
    "Update lint packages automatically if tests pass.",
  ],
  "packageRules": [
    {
      "automerge": true,
      "description": [
        "All lint-related packages.",
      ],
      "matchPackageNames": [
        "ember-template-lint**",
        "@types/eslint",
        "babel-eslint",
        "@babel/eslint-parser",
        "@eslint/**",
        "@eslint-community/**",
        "@stylistic/eslint-plugin**",
        "@types/eslint__**",
        "@typescript-eslint/**",
        "typescript-eslint",
        "eslint**",
        "friendsofphp/php-cs-fixer",
        "squizlabs/php_codesniffer",
        "symplify/easy-coding-standard",
        "stylelint**",
        "codelyzer",
        "/\\btslint\\b/",
        "prettier",
        "remark-lint",
        "standard",
      ],
    },
  ],
}
`;

exports[`config/presets/index > resolvePreset > resolves self-hosted presets without baseConfig 1`] = `
{
  "labels": [
    "self-hosted resolved",
  ],
}
`;
